--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,14 @@
-/* src/index.css */
-
-/* Reseteo básico y configuración del modelo de caja */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Estilos generales del cuerpo de la página */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #121212; /* Un fondo oscuro */
-  color: #EAEAEA; /* Un color de texto claro */
+  background-color: #121212;
+  color: #EAEAEA;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
