feat: crear listas

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -50,3 +50,8 @@
 .new-list-button:hover {
     background-color: #363475;
 }
+
+.list-item.active {
+    background-color: #3b3b3b;
+    font-weight: bold;
+}
